<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jonath.br.a04_calculodeareas.rectangle01">

    <TextView
        android:id="@+id/tvEnterTheWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:textColor="@color/textColor"
        android:text="@string/enter_the_width"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEnterTheHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:textColor="@color/textColor"
        android:text="@string/enter_the_height"
        app:layout_constraintStart_toStartOf="@+id/tvEnterTheWidth"
        app:layout_constraintTop_toBottomOf="@+id/etEnterTheWidth" />

    <EditText
        android:id="@+id/etEnterTheWidth"
        android:layout_width="219dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/tvEnterTheWidth"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterTheWidth" />

    <EditText
        android:id="@+id/etEnterTheHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/tvEnterTheHeight"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterTheHeight" />

    <Button
        android:id="@+id/rectangleCalculatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/calculate_the_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEnterTheHeight"
        android:onClick="onClickCalculateR"/>
</android.support.constraint.ConstraintLayout>
